Class 04 -- fix