@@ -21,19 +21,19 @@ public class Item05_08 {
     }
 
     private static <T extends Comparable<T>> T max(List<T> list) {
-        return list.getFirst();
+        return list.get(0);
     }
 
     private static <T extends Comparable<T>> T max2(List<? extends T> list) {
-        return list.getFirst();
+        return list.get(0);
     }
 
     private static <T extends Comparable<? super T>> T max3(List<? extends T> list) {
-        return list.getFirst();
+        return list.get(0);
     }
 
     private static <T extends Comparable<? extends T>> T max4(List<? extends T> list) {
-        return list.getFirst();
+        return list.get(0);
     }
 }
 
